--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,54 +1,91 @@
 
-body {
-  font-size: 14px;
-  color: #333;
-  margin: 0 auto;
-}
-
-h1,h2,h3,h4,h5,h6,p {
-  padding: 10px 0;
-  margin: 0;
-}
-
-ul,li {
-  padding: 0;
-  margin: 0;
-}
-
 /* ヘッダー */
 header {
   height: 50px;
-  background-color: greenyellow;
   padding: 10px 0;
   display: flex;
 }
+.title-left{
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.login{
+  margin-left: 30px;
+  display: flex;
+  align-items: flex-end;
+  text-decoration: none;
+}
+.sign-up{
+  margin-left: 20px;
+  border: black;
+  display: flex;
+  align-items: flex-end;
+  text-decoration: none;
+}
+
+.logout{
+  margin-left: 30px;
+  display: flex;
+  align-items: flex-end;
+  text-decoration: none;
+}
+.user-nickname{
+  margin-left: 20px;
+  border: black;
+  display: flex;
+  align-items: flex-end;
+  text-decoration: none;
+}
 
 .heading {
-  width: 50%;
+  width: 70%;
   margin-left: 30px;
+  display: flex;
+  align-items: center;
+
 }
 
 .navbar {
-  width: 50%;
-  padding: 20px;
-}
-
-.nav-lists {
   display: flex;
-  justify-content: space-around;
 }
 
-li {
-  list-style: none;
-}
+
 .contents {
   background-color: white;
 }
 
 .first-view {
-  height: 80vh;
-  background-image: image-url('soccer1.jpeg');
-  background-size:1500px  600px;
+  height: 50vh;
+  // background-image: image-url('food1.jpeg');
+  // background-size: 1500px 500px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.first-view-left{
+font-size: 20px;
+width: 300px;
+height: 355px;
+background-image: image-url('running_man.png');
+background-size: 300px;
+margin: 30px 0 0 180px;
+}
+
+.symbol{
+  font-size: 100px;
+  margin-top: 100px;
+}
+
+.first-view-right{
+  font-size: 20px;
+  width: 300px;
+  height: 380px;
+  background-image: image-url('ichigo.jpeg');
+  background-size: 380px;
+  margin: 20px 180px 0 0;
+
 }
 
 .top-image {
@@ -58,84 +95,81 @@ li {
 .upper-content {
   height: 450px ;
   margin: 0 160px;
+  display: flex;
 }
 
 .heading-name {
   text-align: center;
-  border-bottom: 1px solid red;
   width: 200px;
-  margin: 40px auto;
+  writing-mode: vertical-rl;
+  margin: 20px;
 }
 
-.messages {
+.sports {
   width: 50vw;
-  margin: 0 auto;
+  margin-top: 100px;
 }
 
-.message {
+.sport {
   display: flex;
   font-size: 18px;
-  margin: 0 0 16px 70px;
+  margin: 20px 0 16px 7px;
 }
 
-.message-date {
+.high-sport {
+  padding-right: 40px;
+}
+
+.foods {
+  width: 50vw;
+  margin-top: 100px;
+}
+
+.food {
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  margin: 20px 0 16px 7px;
+}
+
+.high-food {
   padding-right: 40px;
 }
 
 .middle-content {
-  height: 450px ;
-  margin: 0 160px;
-}
-
-.stylist-list {
-  display: flex;
-  justify-content: space-around;
-  margin: 60px 0;
-}
-
-.stylist-image {
-  height: 300px;
-}
-
-.stylist-name {
-  font-size: 16px;
-  text-align: center;
-}
-
-.bottom-content {
-  height: 800px ;
+  height: 150px ;
   margin: 0 160px;
   display: flex;
   justify-content: center;
+  align-items: flex-end;
+}
+
+.sentence{
+  font-size: 30px;
+}
+.blue{
+  font-size: 20px;
+  padding: 15px;
+  background-color: rgb(198, 221, 160);
+}
+
+
+.bottom-content {
+  height: 200px ;
+  margin: 0 160px;
+  display: flex;
+  justify-content: space-around;
   align-items: center;
 }
 
-.small-field, .large-field {
-  width: 800px;
-  font-size: 16px;
-  padding: 15px;
-  border: 1px solid #b5aaaa;
-  display: block;
-}
 
-.small-field {
-  margin: 0 auto 15px;
-}
-
-.large-field {
-  height: 200px;
-  margin: 0 auto 30px;
-}
-
-.send {
+.red{
+  height: 60px;
   width: 200px;
-  margin: 0 auto;
-  padding: 15px;
-  border: 1px solid white;
-  background-color: lightblue;
-  color:white;
-  display: block;
+  font-size: 20px;
+  background-color: lightgreen;
 }
+
 
 /* フッター */
 footer {
