--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,10 +10,10 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_self
+ *= require posts
+ *= require calculations
+ *= require foods
+ *= require registrations
+ *= require sessions
  */
-@import"posts.scss";
-@import"calculations.scss";
-@import"foods.scss";
-@import"registrations.scss";
-@import"sessions.scss";
+
