ボタン形丸く

--- a/app/assets/stylesheets/calculations.scss
+++ b/app/assets/stylesheets/calculations.scss
@@ -38,10 +38,12 @@ header{
   padding: 10px;
   border: 1px solid;
   text-decoration: none;
+  border-radius: 100vh;
 }
 .foods-page-btn{
   background-color: rgb(198, 221, 160);
   padding: 10px;
   border: 1px solid;
   text-decoration: none;
+  border-radius: 100vh;
 }
