--- a/app/assets/stylesheets/foods.scss
+++ b/app/assets/stylesheets/foods.scss
@@ -151,6 +151,7 @@ ul{
   width: 200px;
   font-size: 20px;
   background-color: lightgreen;
+  border-radius: 100vh;
 }
 
 .top-pages-btn{
@@ -160,4 +161,5 @@ ul{
   padding: 10px;
   border: 1px solid;
   text-decoration: none;
+  border-radius: 100vh;
 }
