--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -151,6 +151,7 @@ margin: 30px 0 0 180px;
   font-size: 20px;
   padding: 15px;
   background-color: rgb(198, 221, 160);
+  border-radius: 100vh;
 }
 
 
@@ -168,6 +169,8 @@ margin: 30px 0 0 180px;
   width: 200px;
   font-size: 20px;
   background-color: lightgreen;
+  border-radius: 100vh;
+
 }
 
 
