--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -152,6 +152,13 @@ margin: 30px 0 0 180px;
   padding: 15px;
   background-color: rgb(198, 221, 160);
   border-radius: 100vh;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
+}
+.blue:hover{
+  margin-top: 5px;
+  color: #000;
+  background: rgb(198, 221, 160);
+  border-bottom: 2px solid black;
 }
 
 
@@ -170,7 +177,14 @@ margin: 30px 0 0 180px;
   font-size: 20px;
   background-color: lightgreen;
   border-radius: 100vh;
-
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
+}
+.red:hover{
+  margin-top: 5px;
+  color: #000;
+  background:  lightgreen;
+  border-bottom: 2px solid #000;
+  
 }
 
 
