--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -152,13 +152,14 @@ margin: 30px 0 0 180px;
   padding: 15px;
   background-color: rgb(198, 221, 160);
   border-radius: 100vh;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
+  box-shadow: 0 6px 8px rgba(0, 0, 0, .3);
+  border-bottom: 5px solid rgb(75, 73, 73);
 }
 .blue:hover{
   margin-top: 5px;
   color: #000;
   background: rgb(198, 221, 160);
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid rgb(75, 73, 73);
 }
 
 
@@ -172,18 +173,18 @@ margin: 30px 0 0 180px;
 
 
 .red{
-  height: 60px;
-  width: 200px;
+  padding: 15px;
   font-size: 20px;
   background-color: lightgreen;
   border-radius: 100vh;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
+  box-shadow: 0 6px 8px rgba(0, 0, 0, .3);
+  border-bottom: 5px solid rgb(75, 73, 73);
 }
 .red:hover{
   margin-top: 5px;
   color: #000;
   background:  lightgreen;
-  border-bottom: 2px solid #000;
+  border-bottom: 2px solid rgb(75, 73, 73);
   
 }
 
