--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class= "top">
  <div class="menu-top">
-  <div class="top-name">和食</div><div class="top-name2">中華料理</div>
+  <div class="top-name1">和食</div><div class="top-name2">中華料理</div>
  </div>
  <div class="menu">
   <ul class="sets">
