--- a/app/assets/stylesheets/calculations.scss
+++ b/app/assets/stylesheets/calculations.scss
@@ -10,7 +10,6 @@ header{
  font-size: 40px;
 }
 .InputMember{
-  /*	background: red;*/
     display:inline-block;
     width:150px;
   }
@@ -20,13 +19,12 @@ header{
   font-size: 30px;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
 }
 .keisan{
-  height: 60vh;
+  height: 30vh;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .home-btn{
@@ -36,6 +34,7 @@ header{
 }
 .top-page-btn{
   height: 30px;
+  color: #000;
   background-color: rgb(190, 187, 187);
   padding: 10px;
   border: 1px solid;
@@ -55,6 +54,7 @@ header{
 
 .foods-page-btn{
   height: 30px;
+  color: #000;
   background-color: rgb(198, 221, 160);
   padding: 10px;
   border: 1px solid;
