--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -151,13 +151,14 @@ margin: 30px 0 0 180px;
   font-size: 20px;
   padding: 15px;
   background-color: rgb(198, 221, 160);
+  border: 1px solid;
   border-radius: 100vh;
   box-shadow: 0 6px 8px rgba(0, 0, 0, .3);
   border-bottom: 5px solid rgb(75, 73, 73);
 }
 .blue:hover{
   margin-top: 5px;
-  color: #000;
+  color: rgb(75, 73, 73);
   background: rgb(198, 221, 160);
   border-bottom: 2px solid rgb(75, 73, 73);
 }
@@ -176,13 +177,14 @@ margin: 30px 0 0 180px;
   padding: 15px;
   font-size: 20px;
   background-color: lightgreen;
+  border: 1px solid;
   border-radius: 100vh;
   box-shadow: 0 6px 8px rgba(0, 0, 0, .3);
   border-bottom: 5px solid rgb(75, 73, 73);
 }
 .red:hover{
   margin-top: 5px;
-  color: #000;
+  color: rgb(75, 73, 73);
   background:  lightgreen;
   border-bottom: 2px solid rgb(75, 73, 73);
   
