--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -1,7 +1,7 @@
 .top-name{
   display: flex;
   justify-content: center;
-
+  background-color: whitesmoke;
 }
 
 .field{
@@ -12,4 +12,38 @@
 .actions{
   display: flex;
   justify-content: center;
+  height: 20vh;
+}
+
+.sign-up-btn{
+  background-color: rgb(157, 241, 233);
+  height: 70px;
+  padding: 10px;
+  font-size: 20px;
+  border-radius: 100vh;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
+  border-bottom: 5px solid rgb(75, 73, 73);
+}
+.sign-up-btn:hover{
+  margin-top: 5px;
+  color: rgb(75, 73, 73);
+  background:  rgb(238, 212, 125);
+  border-bottom: 2px solid rgb(75, 73, 73);
+  
+}
+.login-btn2{
+  color: #000;
+  padding: 5px;
+  border: 1px solid;
+  border-radius: 100vh;
+  text-decoration: none;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
+  border-bottom: 5px solid rgb(75, 73, 73);
+}
+
+.login-btn2:hover{
+  margin-top: 5px;
+  color: rgb(75, 73, 73);
+  background:  rgb(238, 212, 125);
+  border-bottom: 2px solid rgb(75, 73, 73);
 }
