--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,8 @@
          <%= link_to "ログイン", new_user_session_path,class: "login" %> 
          <%= link_to "新規登録", new_user_registration_path,class: "sign-up" %>
         <%else%>
-         <%= link_to current_user.nickname,"#", class:"user-nickname" %>
+        <div class="greeting">ようこそ</div>
+         <%= link_to "#{current_user.nickname}さん","#", class:"user-nickname" %>
          <%= link_to "ログアウト", destroy_user_session_path,method: :delete,class: "logout" %>
          <%end%>
       </div>
