--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -9,6 +9,7 @@ header {
   font-size: 50px;
   text-align: center;
   margin-bottom: 10px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .login{
